--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+@import "assets/css/bootstrap.min.css";
+/*@import "assets/css/font-awesome.min.css";*/
+@import "assets/css/mdb.min.css";
+
+        /* TEMPLATE STYLES */
+        
+        main {
+            padding-top: 3rem;
+            padding-bottom: 2rem;
+        }
+        
+        .extra-margins {
+            margin-top: 1rem;
+            margin-bottom: 2.5rem;
+        }
+         .navbar {
+            background-color: #3b3b3f;
+        }
+        
+        footer.page-footer {
+            background-color: #3b3b3f;
+            margin-top: 2rem;
+         
+        }
