--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,7 +1,7 @@
     <header>
 
         <!--Navbar-->
-        <nav class="navbar navbar-toggleable-md navbar-dark">
+        <nav class="container-fluid navbar navbar-default navbar-fixed-top  navbar-toggleable-md navbar-dark">
             <div class="container">
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -15,10 +15,10 @@
                             <a class="nav-link">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Features</a>
+                            <a class="nav-link">Joiner</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Pricing</a>
+                            <a class="nav-link">About</a>
                         </li>
                         <li class="nav-item dropdown btn-group">
                             <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
