all the basic navigation working

--- a/src/app/component/slider/slider.component.html
+++ b/src/app/component/slider/slider.component.html
@@ -19,7 +19,7 @@
     <p [innerHTML]="textcontent"></p>
 
 
-    <a class="btn btn-primary" href="">Learn More</a>
+    <!--<a class="btn btn-primary" href="">Learn More</a>-->
 
   </div>
 </div>
