--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -6,32 +6,32 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand">
                     <strong>Connectr</strong>
                 </a>
                 <div class="collapse navbar-collapse" id="navbarNav1">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link">Home <span class="sr-only">(current)</span></a>
+                        <li class="nav-item" routerLinkActive="active">
+                            <a routerLink="/home" class="nav-link">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link">Joiner</a>
+                        <li class="nav-item" routerLinkActive="active">
+                            <a class="disabled nav-link">Joiner</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link">About</a>
+                        <li  routerLinkActive="active" class="nav-item">
+                            <a routerLink="/about" class="nav-link">About</a>
                         </li>
-                        <li class="nav-item dropdown btn-group">
-                            <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                            <div class="dropdown-menu dropdown" aria-labelledby="dropdownMenu1">
-                                <a class="dropdown-item">Action</a>
-                                <a class="dropdown-item">Another action</a>
-                                <a class="dropdown-item">Something else here</a>
-                            </div>
-                        </li>
+                        <!--<li class="nav-item dropdown btn-group">-->
+                            <!--<a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>-->
+                            <!--<div class="dropdown-menu dropdown" aria-labelledby="dropdownMenu1">-->
+                                <!--<a class="dropdown-item">Action</a>-->
+                                <!--<a class="dropdown-item">Another action</a>-->
+                                <!--<a class="dropdown-item">Something else here</a>-->
+                            <!--</div>-->
+                        <!--</li>-->
                     </ul>
-                    <form class="form-inline waves-effect waves-light">
-                        <input class="form-control" type="text" placeholder="Search">
-                    </form>
+                    <!--<form class="form-inline waves-effect waves-light">-->
+                        <!--<input class="form-control" type="text" placeholder="Search">-->
+                    <!--</form>-->
                 </div>
             </div>
         </nav>
