--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -15,7 +15,7 @@
                             <a routerLink="/home" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item" routerLinkActive="active">
-                            <a class="disabled nav-link">Joiner</a>
+                            <a routerLink="/tag" class="nav-link">Tag Cloud</a>
                         </li>
                         <li  routerLinkActive="active" class="nav-item">
                             <a routerLink="/about" class="nav-link">About</a>
