tweaked the app state a little.  Need to get to addeing these tests

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,15 +1,14 @@
     <header>
 
-        <!--Navbar-->
-        <nav class="container-fluid navbar navbar-default navbar-fixed-top  navbar-toggleable-md navbar-dark">
-            <div class="container">
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="container navbar navbar-default navbar-fixed-top  navbar-toggleable-md navbar-dark">
+            <div class="container navbar-fixed-top">
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <a class="navbar-brand">
-                    <strong>Connectr</strong>
+                    <strong>{{apptitle}}</strong>
                 </a>
-                <div class="collapse navbar-collapse" id="navbarNav1">
+                <div class="collapse navbar-collapse" id="mainNav">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item" routerLinkActive="active">
                             <a routerLink="/home" class="nav-link">Home</a>
