--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The whole content below can be removed with the new code.-->
-<app-header></app-header>
+<app-header apptitle="{{title}}"></app-header>
 
 
 <router-outlet></router-outlet>
