added a noddy table

--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -5,5 +5,7 @@
 .navbar-dark {
   color: white;
   background-color: royalblue;
+  background-color: lightslategray;
+  background-color: slategray;
 }
 
